# infinix-gtbook-mecha-bar

./: .gitignore  README.md  infinix_mecha_rgb.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aur/: .SRCINFO  99-infinix-mecha-bar.rules  PKGBUILD  infinix-mecha-bar.install
