[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infinix-mecha-bar"
version = "0.1.0"
description = "Linux control for Infinix GT Book rear Mecha bar (UART /dev/ttyS4)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[project.scripts]
infinix-mecha-bar = "infinix_mecha_rgb:main"

[tool.setuptools]
py-modules = ["infinix_mecha_rgb"]
